# multiconn_archicad

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml  update-readme.yml
code_generation/: archicad_api_codegen_brief.md  paths.py  project_brief.md
code_generation/generators/: 01_schema_generator.py  02_generate_dicts_and_models.py  03_model_cleaner.py  04_split_models.py  06_typed_dict_cleaner.py  07_split_typed_dicts.py  generate_typed_dicts.py  model_cleaner.py  paths.py  schema_generator.py  split_models.py  split_typed_dicts.py  typed_dict_cleaner.py
code_generation/official/: official_commands.py  paths.py  run_official_pipeline.py
code_generation/schema/: _base_model_names.json  _command_details.json  _command_model_names.json  tapir_master_schema.json
code_generation/shared/: format.py  schema_patching.py  utils.py
code_generation/tapir/: paths.py  run_tapir_pipeline.py
code_generation/tapir_model_generators/: 01_schema_generator.py  02_generate_dicts_and_models.py  03_model_cleaner.py  04_split_models.py  06_typed_dict_cleaner.py  07_split_typed_dicts.py  08_generate_model_tests.py
code_generation/temp_models/: base_models.py  input_base_models.py  input_typed_dicts.py  typed_dicts.py
documentation/dialog_handlers/: win_int_handler_factory.xlsx
examples/: basic_usage.py  pydantic_experiment.py  run_function_on_all_active.py
examples/multi-palette/: README.md  app.py  build.py  pyproject.toml
examples/multi-palette/assets/css/: global-css.css
examples/multi-palette/functions/: highlight_elements.py  unused_view_cleaner.py
examples/multi-palette/logic/: archi_cad.py  controller.py  load_script.py  local_file_picker.py
multi_conn_ac/: __init__.py  archicad_connection.py  conn_header.py  core_commands.py  method_binders.py  multi_conn_ac.py
multi_conn_ac/actions/: baseclasses.py  connect.py  connect_or_open.py  disconnect.py  quit_and_disconnect.py  refresh.py  run_command.py
scripts/stress_test_archicad_server/: concurrent_requests.py  connection_pool_exhaustion.py  dirty_disconnect.py  haevy_mixed_payload_bomber.py  readme.md  shared_client.py  specific.py  (+1 more)
tests/: conftest.py  dialog_handlers.py  open_close_test.py  run_function_on_all_active.py  start_archicads.bat  test.py  test_basic_types.py  test_command_execution.py  test_connection_lifecycle.py  test_generated_official_models.py  test_generated_tapir_models.py  test_project_management.py  utilities.py
(+256 files in other folders)
