[project]
name = "multi_conn_ac"
version = "0.1.0"
description = "MultiConnAC is a connection object for ArchiCAD’s JSON API and its Python wrapper, designed to manage multiple open instances of ArchiCAD simultaneously."
readme = "README.md"
authors = [
    { name = "SzamosiMate", email = "szamimate@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "archicad>=28.3000",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.8.4",
]
