[project]
name = "multi-palette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "multi-conn-ac",
    "nicegui>=2.9.0",
    "pywebview>=5.3.2",
    "pywin32>=308",
]

[tool.uv.sources]
multi-conn-ac = { url = "https://github.com/SzamosiMate/multiconn_archicad/releases/download/v0.1.0-alpha/multiconn_archicad-0.1.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
]
